--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -15,6 +15,6 @@
   "an11.2:5.2": "Niech odczuwam błogość.",
   "an11.2:5.3": "To naturalne, mnisi, że w kimś, kogo ciało jest uspokojone odczuwa błogość.",
   "an11.2:6.1": "Mnisi, ktoś błogi nie musi dokonać intencji:",
-  "an11.2:6.2": "Niech mój umysł będzie skupiony.",
+  "an11.2:6.2": "Niech mój umysł się skupi.",
   "an11.2:7.2": "Obym znał i widział rzeczy takimi, jakie są naprawdę."
 }
