Translations by HarDao to translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -17,5 +17,6 @@
   "an11.2:6.1": "Mnisi, ktoś błogi nie musi dokonać intencji:",
   "an11.2:6.2": "Niech mój umysł się skupi.",
   "an11.2:6.3": "To naturalne, mnisi, że w kimś błogim umysł się skupi.",
+  "an11.2:7.1": "Mnisi, ktoś skupiony nie musi dokonać intencji:",
   "an11.2:7.2": "Obym znał i widział rzeczy takimi, jakie są naprawdę."
 }
