--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -18,5 +18,5 @@
   "an11.2:6.2": "Niech mój umysł się skupi.",
   "an11.2:6.3": "To naturalne, mnisi, że w kimś błogim umysł się skupi.",
   "an11.2:7.1": "Mnisi, ktoś skupiony nie musi dokonać intencji:",
-  "an11.2:7.2": "Obym znał i widział rzeczy takimi, jakie są naprawdę."
+  "an11.2:7.2": "Obym pojmował i widział zgodnie z rzeczywistością."
 }
