--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -19,5 +19,6 @@
   "an11.2:6.3": "To naturalne, mnisi, że w kimś błogim umysł się skupi.",
   "an11.2:7.1": "Mnisi, ktoś skupiony nie musi dokonać intencji:",
   "an11.2:7.2": "Obym pojmował i widział zgodnie z rzeczywistością.",
-  "an11.2:7.3": "To naturalne, mnisi, że ktoś skupiony będzie pojmował i widział zgodnie z rzeczywistością."
+  "an11.2:7.3": "To naturalne, mnisi, że ktoś skupiony będzie pojmował i widział zgodnie z rzeczywistością.",
+  "an11.2:8.1": "Mnisi, ktoś, kto pojmuje i widzi zgodnie z rzeczywistością nie musi dokonać intencji:"
 }
