--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -25,5 +25,6 @@
   "an11.2:8.3": "To naturalne, mnisi, że ktoś, kto pojmuje i widzi zgodnie z rzeczywistością, ten się nie przywiązuje.",
   "an11.2:9.1": "Mnisi, ktoś nieprzywiązany nie musi dokonać intencji:",
   "an11.2:9.2": "Niech będę z wyczerpanymi żądzami.",
-  "an11.2:9.3": "To naturalne, mnisi, że ktoś nieprzywiązany będzie z wyczerpanymi żądzami."
+  "an11.2:9.3": "To naturalne, mnisi, że ktoś nieprzywiązany będzie z wyczerpanymi żądzami.",
+  "an11.2:10.1": "Mnisi, ktoś z wyczerpanymi żądzami nie musi dokonać intencji:"
 }
