Translations by HarDao to translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -26,5 +26,6 @@
   "an11.2:9.1": "Mnisi, ktoś nieprzywiązany nie musi dokonać intencji:",
   "an11.2:9.2": "Niech będę z wyczerpanymi żądzami.",
   "an11.2:9.3": "To naturalne, mnisi, że ktoś nieprzywiązany będzie z wyczerpanymi żądzami.",
-  "an11.2:10.1": "Mnisi, ktoś z wyczerpanymi żądzami nie musi dokonać intencji:"
+  "an11.2:10.1": "Mnisi, ktoś z wyczerpanymi żądzami nie musi dokonać intencji:",
+  "an11.2:10.2": "Niech osiągnę wiedzę i wizję wyzwolenia."
 }
