--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -28,5 +28,5 @@
   "an11.2:9.3": "To naturalne, mnisi, że ktoś nieprzywiązany będzie z wyczerpanymi żądzami.",
   "an11.2:10.1": "Mnisi, ktoś z wyczerpanymi żądzami nie musi dokonać intencji:",
   "an11.2:10.2": "Niech urzeczywistnię wiedzę i wizję wyzwolenia.",
-  "an11.2:10.3": "To naturalne, mnisi, że w kimś, w kim wyczerpane żądze, ten osiąga wiedzę i wizję wyzwolenia."
+  "an11.2:10.3": "To naturalne, mnisi, że w kimś, w kim wyczerpane żądze, ten urzeczywistnia wiedzę i wizję wyzwolenia."
 }
