--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.86:0.1": "Verbundene Lehrreden 22.86 ",
-  "sn22.86:0.2": "9. Das Kapitel mit Ordensältesten "
+  "sn22.86:0.2": "9. Das Kapitel mit Ordensältesten ",
+  "sn22.86:0.3": "Mit Anurādha "
 }
