Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.86:0.1": "Verbundene Lehrreden 22.86 ",
   "sn22.86:0.2": "9. Das Kapitel mit Ordensältesten ",
-  "sn22.86:0.3": "Mit Anurādha "
+  "sn22.86:0.3": "Mit Anurādha ",
+  "sn22.86:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. "
 }
