--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.86:0.2": "9. Das Kapitel mit Ordensältesten ",
   "sn22.86:0.3": "Mit Anurādha ",
   "sn22.86:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
-  "sn22.86:1.2": "Zu dieser Zeit hielt sich der Ehrwürdige Anurādha nicht weit vom Buddha in einer Hütte in der Wildnis auf. "
+  "sn22.86:1.2": "Zu dieser Zeit hielt sich der Ehrwürdige Anurādha nicht weit vom Buddha in einer Hütte in der Wildnis auf. ",
+  "sn22.86:1.3": "Da gingen mehrere Wanderer, die andere Wege gehen, zum Ehrwürdigen Anurādha und tauschten Willkommensgrüße mit ihm aus. "
 }
