--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.86:1.2": "Zu dieser Zeit hielt sich der Ehrwürdige Anurādha nicht weit vom Buddha in einer Hütte in der Wildnis auf. ",
   "sn22.86:1.3": "Da gingen mehrere Wanderer, die andere Wege gehen, zum Ehrwürdigen Anurādha und tauschten Willkommensgrüße mit ihm aus. ",
   "sn22.86:1.4": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin und sagten zu ihm: ",
-  "sn22.86:1.5": "„Werter Anurādha, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn auf diese vier Arten: "
+  "sn22.86:1.5": "„Werter Anurādha, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn auf diese vier Arten: ",
+  "sn22.86:1.6": "‚Ein Klargewordener besteht nach dem Tod fort oder er besteht nach dem Tod nicht fort oder er besteht nach dem Tod fort und besteht auch nicht fort oder weder besteht er nach dem Tod fort, noch besteht er nicht fort.‘“ "
 }
