--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.86:2.2": "„Werte Freunde, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn anders als auf diese vier Arten: ",
   "sn22.86:2.3": "‚Ein Klargewordener besteht nach dem Tod fort oder er besteht nach dem Tod nicht fort oder er besteht nach dem Tod fort und besteht auch nicht fort oder weder besteht er nach dem Tod fort, noch besteht er nicht fort.‘“ ",
   "sn22.86:2.4": "Daraufhin sagten die Wanderer zu ihm: ",
-  "sn22.86:2.5": "„Dieser Mönch muss neu im Orden sein, kürzlich fortgezogen, oder ein törichter, unfähiger älterer Mönch.“ "
+  "sn22.86:2.5": "„Dieser Mönch muss neu im Orden sein, kürzlich fortgezogen, oder ein törichter, unfähiger älterer Mönch.“ ",
+  "sn22.86:2.6": "Und nachdem sie den Ehrwürdigen Anurādha getadelt hatten, indem sie ihn „neu“ und „töricht“ nannten, erhoben sich die Wanderer von ihren Sitzen und gingen. "
 }
