--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.86:2.4": "Daraufhin sagten die Wanderer zu ihm: ",
   "sn22.86:2.5": "„Dieser Mönch muss neu im Orden sein, kürzlich fortgezogen, oder ein törichter, unfähiger älterer Mönch.“ ",
   "sn22.86:2.6": "Und nachdem sie den Ehrwürdigen Anurādha getadelt hatten, indem sie ihn „neu“ und „töricht“ nannten, erhoben sich die Wanderer von ihren Sitzen und gingen. ",
-  "sn22.86:3.1": "Kurz nachdem sie weggegangen waren, dachte Anurādha: "
+  "sn22.86:3.1": "Kurz nachdem sie weggegangen waren, dachte Anurādha: ",
+  "sn22.86:3.2": "„Wenn Wanderer weiter fragen würden, "
 }
