Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.86:2.5": "„Dieser Mönch muss neu im Orden sein, kürzlich fortgezogen, oder ein törichter, unfähiger älterer Mönch.“ ",
   "sn22.86:2.6": "Und nachdem sie den Ehrwürdigen Anurādha getadelt hatten, indem sie ihn „neu“ und „töricht“ nannten, erhoben sich die Wanderer von ihren Sitzen und gingen. ",
   "sn22.86:3.1": "Kurz nachdem sie weggegangen waren, dachte Anurādha: ",
-  "sn22.86:3.2": "„Wenn Wanderer weiter fragen würden, "
+  "sn22.86:3.2": "„Wenn Wanderer weiter fragen würden, ",
+  "sn22.86:3.3": "wie sollte ich ihnen antworten, sodass ich die Worte des Buddha wiedergebe und ihn nicht mit einer Unwahrheit falsch darstelle? Wie sollte ich im Einklang mit der Lehre erklären, sodass ich nicht zu Recht getadelt oder kritisiert werden könnte?“ "
 }
