Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.86:3.1": "Kurz nachdem sie weggegangen waren, dachte Anurādha: ",
   "sn22.86:3.2": "„Wenn Wanderer weiter fragen würden, ",
   "sn22.86:3.3": "wie sollte ich ihnen antworten, sodass ich die Worte des Buddha wiedergebe und ihn nicht mit einer Unwahrheit falsch darstelle? Wie sollte ich im Einklang mit der Lehre erklären, sodass ich nicht zu Recht getadelt oder kritisiert werden könnte?“ ",
-  "sn22.86:4.1": "Da ging der Ehrwürdige Anurādha zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm von der Begebenheit. "
+  "sn22.86:4.1": "Da ging der Ehrwürdige Anurādha zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm von der Begebenheit. ",
+  "sn22.86:7.1": "„Was denkst du, Anurādha? "
 }
