--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.86:7.1": "„Was denkst du, Anurādha? ",
   "sn22.86:7.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.86:7.3": "„Unbeständig, Herr.“ ",
-  "sn22.86:7.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ "
+  "sn22.86:7.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
+  "sn22.86:7.5": "„Leiden, Herr.“ "
 }
