--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.86:7.3": "„Unbeständig, Herr.“ ",
   "sn22.86:7.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
   "sn22.86:7.5": "„Leiden, Herr.“ ",
-  "sn22.86:7.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: "
+  "sn22.86:7.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
+  "sn22.86:7.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
