Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.86:7.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
   "sn22.86:7.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.86:7.8": "„Nein, Herr.“ ",
-  "sn22.86:7.9": "„Ist Gefühl … "
+  "sn22.86:7.9": "„Ist Gefühl … ",
+  "sn22.86:7.10": "Wahrnehmung … "
 }
