--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.86:7.8": "„Nein, Herr.“ ",
   "sn22.86:7.9": "„Ist Gefühl … ",
   "sn22.86:7.10": "Wahrnehmung … ",
-  "sn22.86:7.11": "Sind Entscheidungen … "
+  "sn22.86:7.11": "Sind Entscheidungen … ",
+  "sn22.86:7.12": "Ist Bewusstsein beständig oder unbeständig?“ "
 }
