Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.86:7.10": "Wahrnehmung … ",
   "sn22.86:7.11": "Sind Entscheidungen … ",
   "sn22.86:7.12": "Ist Bewusstsein beständig oder unbeständig?“ ",
-  "sn22.86:7.13": "„Unbeständig, Herr.“ … "
+  "sn22.86:7.13": "„Unbeständig, Herr.“ … ",
+  "sn22.86:7.14": "„Daher solltest du jegliche Art … sehen … "
 }
