--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.86:7.13": "„Unbeständig, Herr.“ … ",
   "sn22.86:7.14": "„Daher solltest du jegliche Art … sehen … ",
   "sn22.86:7.15": "Wenn er das sieht … ",
-  "sn22.86:7.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ "
+  "sn22.86:7.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
+  "sn22.86:8.1": "Was denkst du, Anurādha? "
 }
