--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.86:8.3": "„Nein, Herr.“ ",
   "sn22.86:8.4": "„Siehst du den Klargewordenen als Gefühl … ",
   "sn22.86:8.5": "als Wahrnehmung … ",
-  "sn22.86:8.6": "als Entscheidungen … "
+  "sn22.86:8.6": "als Entscheidungen … ",
+  "sn22.86:8.7": "als Bewusstsein an?“ "
 }
