Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn22.86:8.5": "als Wahrnehmung … ",
   "sn22.86:8.6": "als Entscheidungen … ",
   "sn22.86:8.7": "als Bewusstsein an?“ ",
-  "sn22.86:8.8": "„Nein, Herr.“ "
+  "sn22.86:8.8": "„Nein, Herr.“ ",
+  "sn22.86:9.1": "„Was denkst du, Anurādha? "
 }
