Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "sn22.86:9.2": "Siehst du den Klargewordenen als in der Form an?“ ",
   "sn22.86:9.3": "„Nein, Herr.“ ",
   "sn22.86:9.4": "„Oder siehst du den Klargewordenen als von Form getrennt an?“ ",
-  "sn22.86:9.5": "„Nein, Herr.“ "
+  "sn22.86:9.5": "„Nein, Herr.“ ",
+  "sn22.86:9.6": "„Siehst du den Klargewordenen als im Gefühl an … "
 }
