--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.86:9.3": "„Nein, Herr.“ ",
   "sn22.86:9.4": "„Oder siehst du den Klargewordenen als von Form getrennt an?“ ",
   "sn22.86:9.5": "„Nein, Herr.“ ",
-  "sn22.86:9.6": "„Siehst du den Klargewordenen als im Gefühl an … "
+  "sn22.86:9.6": "„Siehst du den Klargewordenen als im Gefühl an … ",
+  "sn22.86:9.7": "oder als vom Gefühl getrennt … "
 }
