Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "sn22.86:9.4": "„Oder siehst du den Klargewordenen als von Form getrennt an?“ ",
   "sn22.86:9.5": "„Nein, Herr.“ ",
   "sn22.86:9.6": "„Siehst du den Klargewordenen als im Gefühl an … ",
-  "sn22.86:9.7": "oder als vom Gefühl getrennt … "
+  "sn22.86:9.7": "oder als vom Gefühl getrennt … ",
+  "sn22.86:9.8": "als in der Wahrnehmung … "
 }
