--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.86:9.6": "„Siehst du den Klargewordenen als im Gefühl an … ",
   "sn22.86:9.7": "oder als vom Gefühl getrennt … ",
   "sn22.86:9.8": "als in der Wahrnehmung … ",
-  "sn22.86:9.9": "oder als von der Wahrnehmung getrennt … "
+  "sn22.86:9.9": "oder als von der Wahrnehmung getrennt … ",
+  "sn22.86:9.10": "als in Entscheidungen … "
 }
