Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -53,5 +53,5 @@
   "sn22.86:9.9": "oder als von der Wahrnehmung getrennt … ",
   "sn22.86:9.10": "als in Entscheidungen … ",
   "sn22.86:9.11": "oder als von Entscheidungen getrennt … ",
-  "sn22.86:9.12": "Siehst du den Klargewordenen als im Bewusstsein an?“ "
+  "sn22.86:9.12": "als im Bewusstsein … "
 }
