Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "sn22.86:9.11": "oder als von Entscheidungen getrennt … ",
   "sn22.86:9.12": "als im Bewusstsein … ",
   "sn22.86:9.13": "oder als vom Bewusstsein getrennt?“ ",
-  "sn22.86:9.14": "„Nein, Herr.“ "
+  "sn22.86:9.14": "„Nein, Herr.“ ",
+  "sn22.86:10.1": "„Was denkst du, Anurādha? "
 }
