Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "sn22.86:9.13": "oder als vom Bewusstsein getrennt?“ ",
   "sn22.86:9.14": "„Nein, Herr.“ ",
   "sn22.86:10.1": "„Was denkst du, Anurādha? ",
+  "sn22.86:10.2": "Siehst du den Klargewordenen als jemanden an, der Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein besitzt?“ ",
   "sn22.86:12.1": "„In diesem Fall, Anurādha, da du den Klargewordenen in diesem Leben nicht als Tatsache annimmst, ist es da angemessen, zu erklären: "
 }
