--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "sn22.86:11.1": "„Was denkst du, Anurādha? ",
   "sn22.86:11.2": "Siehst du den Klargewordenen als jemanden an, der ohne Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein ist?“ ",
   "sn22.86:11.3": "„Nein, Herr.“ ",
-  "sn22.86:12.1": "„In diesem Fall, Anurādha, da du den Klargewordenen in diesem Leben nicht als Tatsache annimmst, ist es da angemessen, zu erklären: "
+  "sn22.86:12.1": "„In diesem Fall, Anurādha, da du den Klargewordenen in diesem Leben nicht als Tatsache annimmst, ist es da angemessen, zu erklären: ",
+  "sn22.86:12.2": "‚Werte Freunde, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn anders als auf diese vier Arten: "
 }
