Translations by HarDao to translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -28,5 +28,6 @@
   "an11.2:9.3": "To naturalne, mnisi, że ktoś nieprzywiązany będzie z wyczerpanymi żądzami.",
   "an11.2:10.1": "Mnisi, ktoś z wyczerpanymi żądzami nie musi dokonać intencji:",
   "an11.2:10.2": "Niech urzeczywistnię wiedzę i wizję wyzwolenia.",
-  "an11.2:10.3": "To naturalne, mnisi, że w kimś, w kim wyczerpane żądze, ten urzeczywistnia wiedzę i wizję wyzwolenia."
+  "an11.2:10.3": "To naturalne, mnisi, że w kimś, w kim wyczerpane żądze, ten urzeczywistnia wiedzę i wizję wyzwolenia.",
+  "an11.2:11.1": "Tak oto, mnisi, urzeczywistnienie wiedzy i wizji wyzwolenia jest znaczeniem, właściwym rezultatem wyczerpania żądz, wyczerpanie żądz jest znaczeniem, właściwym rezultatem nieprzywiązania, nieprzywiązanie jest znaczeniem, właściwym rezultatem pojmowania i widzenia zgodnie z rzeczywistością, pojmowanie i widzenie zgodnie z rzeczywistością jest znaczeniem, właściwym rezultatem skupienia, skupienie jest znaczeniem, właściwym rezultatem błogości, błogość jest znaczeniem, właściwym rezultatem uspokojenia, uspokojenie jest znaczeniem, właściwym rezultatem radosnego uniesienia, radosne uniesienie jest znaczeniem, właściwym rezultatem zadowolenia, zadowolenie jest znaczeniem, właściwym rezultatem braku żalu, brak żalu jest znaczeniem, właściwym rezultatem dobrej moralności."
 }
