Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.86_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.86:12.2": "‚Werte Freunde, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn anders als auf diese vier Arten: ",
   "sn22.86:12.3": "„Ein Klargewordener besteht nach dem Tod fort oder er besteht nach dem Tod nicht fort oder er besteht nach dem Tod fort und besteht auch nicht fort oder weder besteht er nach dem Tod fort, noch besteht er nicht fort.“‘“ ",
   "sn22.86:12.4": "„Nein, Herr.“ ",
-  "sn22.86:13.1": "„Gut, gut, Anurādha! "
+  "sn22.86:13.1": "„Gut, gut, Anurādha! ",
+  "sn22.86:13.2": "Wie früher, so beschreibe ich auch heute das Leiden und das Aufhören des Leidens.“ "
 }
