Translations by HarDao to translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -1,5 +1,6 @@
 {
   "an11.2:0.1": "Zbiór mów według wyliczeń 11.2",
+  "an11.2:0.2": "1. Rozdział o poleganiu",
   "an11.2:1.1": "Mnisi, ktoś moralny, przestrzegający zasad moralnych, nie musi dokonać intencji:",
   "an11.2:1.2": "Niech pojawi się we mnie brak żalu.",
   "an11.2:1.3": "To naturalne, mnisi, że w kimś moralnym, przestrzegającym zasad moralnych pojawia się brak żalu.",
