Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn44.2:0.1": "Verbundene Lehrreden 44.2 ",
-  "sn44.2:0.2": "1. Das Kapitel über die nicht erklärten Punkte "
+  "sn44.2:0.2": "1. Das Kapitel über die nicht erklärten Punkte ",
+  "sn44.2:0.3": "Mit Anurādha "
 }
