--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -845,6 +845,7 @@
   "sn-name:1365.sn44": "Verbundene Lehrreden über das, was nicht erklärt wurde ",
   "sn-name:1366.sn44-abyakatavagga": "Das Kapitel über die nicht erklärten Punkte ",
   "sn-name:1367.sn44.1": "Mit Khemā ",
+  "sn-name:1368.sn44.2": "Mit Anurādha ",
   "sn-name:1378.sn-mahavaggasamyutta": "Die Gruppe der Verbundenen Lehrreden über den Pfad ",
   "sn-name:1379.sn45": "Verbundene Lehrreden über den achtfachen Pfad ",
   "sn-name:1380.sn45-avijjavagga": "Das Kapitel über Unwissenheit ",
