Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn44.2:0.1": "Verbundene Lehrreden 44.2 ",
   "sn44.2:0.2": "1. Das Kapitel über die nicht erklärten Punkte ",
   "sn44.2:0.3": "Mit Anurādha ",
-  "sn44.2:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. "
+  "sn44.2:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
+  "sn44.2:1.2": "Zu dieser Zeit hielt sich der Ehrwürdige Anurādha nicht weit vom Buddha in einer Hütte in der Wildnis auf. "
 }
