--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn44.2:0.3": "Mit Anurādha ",
   "sn44.2:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
   "sn44.2:1.2": "Zu dieser Zeit hielt sich der Ehrwürdige Anurādha nicht weit vom Buddha in einer Hütte in der Wildnis auf. ",
-  "sn44.2:1.3": "Da gingen mehrere Wanderer, die andere Wege gehen, zum Ehrwürdigen Anurādha und tauschten Willkommensgrüße mit ihm aus. "
+  "sn44.2:1.3": "Da gingen mehrere Wanderer, die andere Wege gehen, zum Ehrwürdigen Anurādha und tauschten Willkommensgrüße mit ihm aus. ",
+  "sn44.2:1.4": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin und sagten zu ihm: "
 }
