--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn44.2:1.5": "„Werter Anurādha, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn auf diese vier Arten: ",
   "sn44.2:1.6": "‚Ein Klargewordener besteht nach dem Tod fort oder er besteht nach dem Tod nicht fort oder er besteht nach dem Tod fort und besteht auch nicht fort oder weder besteht er nach dem Tod fort, noch besteht er nicht fort.‘“ ",
   "sn44.2:1.7": "„Werte Freunde, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn anders als auf diese vier Arten: ",
-  "sn44.2:1.8": "‚Ein Klargewordener besteht nach dem Tod fort oder er besteht nach dem Tod nicht fort oder er besteht nach dem Tod fort und besteht auch nicht fort oder weder besteht er nach dem Tod fort, noch besteht er nicht fort.‘“ "
+  "sn44.2:1.8": "‚Ein Klargewordener besteht nach dem Tod fort oder er besteht nach dem Tod nicht fort oder er besteht nach dem Tod fort und besteht auch nicht fort oder weder besteht er nach dem Tod fort, noch besteht er nicht fort.‘“ ",
+  "sn44.2:1.9": "Daraufhin sagten die Wanderer zu ihm: "
 }
