--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn44.2:1.9": "Daraufhin sagten die Wanderer zu ihm: ",
   "sn44.2:1.10": "„Dieser Mönch muss neu im Orden sein, kürzlich fortgezogen, oder ein törichter, unfähiger älterer Mönch.“ ",
   "sn44.2:1.11": "Und nachdem sie den Ehrwürdigen Anurādha getadelt hatten, indem sie ihn „neu“ und „töricht“ nannten, erhoben sich die Wanderer von ihren Sitzen und gingen. ",
-  "sn44.2:2.1": "Kurz nachdem sie weggegangen waren, dachte Anurādha: "
+  "sn44.2:2.1": "Kurz nachdem sie weggegangen waren, dachte Anurādha: ",
+  "sn44.2:2.2": "„Wenn diese Wanderer weiter fragen würden, "
 }
