--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn44.2:2.2": "„Wenn diese Wanderer weiter fragen würden, ",
   "sn44.2:2.3": "wie sollte ich ihnen antworten, sodass ich die Worte des Buddha wiedergebe und ihn nicht mit einer Unwahrheit falsch darstelle? Wie sollte ich im Einklang mit der Lehre erklären, sodass ich nicht zu Recht getadelt oder kritisiert werden könnte?“ ",
   "sn44.2:2.4": "Da ging der Ehrwürdige Anurādha zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm von der Begebenheit. ",
-  "sn44.2:3.1": "„Was denkst du, Anurādha? "
+  "sn44.2:3.1": "„Was denkst du, Anurādha? ",
+  "sn44.2:3.2": "Ist Form beständig oder unbeständig?“ "
 }
