--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn44.2:2.4": "Da ging der Ehrwürdige Anurādha zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm von der Begebenheit. ",
   "sn44.2:3.1": "„Was denkst du, Anurādha? ",
   "sn44.2:3.2": "Ist Form beständig oder unbeständig?“ ",
-  "sn44.2:4.1": "„Unbeständig, Herr.“ "
+  "sn44.2:4.1": "„Unbeständig, Herr.“ ",
+  "sn44.2:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
 }
