--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn44.2:3.2": "Ist Form beständig oder unbeständig?“ ",
   "sn44.2:4.1": "„Unbeständig, Herr.“ ",
   "sn44.2:5.1": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
-  "sn44.2:6.1": "„Leiden, Herr.“ "
+  "sn44.2:6.1": "„Leiden, Herr.“ ",
+  "sn44.2:7.1": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: "
 }
