--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn44.2:8.1": "„Nein, Herr.“ ",
   "sn44.2:9.1": "„Ist Gefühl … ",
   "sn44.2:9.3": "Wahrnehmung … ",
-  "sn44.2:9.4": "Sind Entscheidungen … "
+  "sn44.2:9.4": "Sind Entscheidungen … ",
+  "sn44.2:9.5": "Ist Bewusstsein beständig oder unbeständig?“ "
 }
