--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn44.2:9.5": "Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn44.2:10.1": "„Unbeständig, Herr.“ ",
   "sn44.2:11.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
-  "sn44.2:12.1": "„Leiden, Herr.“ "
+  "sn44.2:12.1": "„Leiden, Herr.“ ",
+  "sn44.2:13.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
 }
