--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn44.2:10.1": "„Unbeständig, Herr.“ ",
   "sn44.2:11.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn44.2:12.1": "„Leiden, Herr.“ ",
-  "sn44.2:13.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "sn44.2:13.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "sn44.2:13.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
