--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn44.2:12.1": "„Leiden, Herr.“ ",
   "sn44.2:13.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "sn44.2:13.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
-  "sn44.2:14.1": "„Nein, Herr.“ "
+  "sn44.2:14.1": "„Nein, Herr.“ ",
+  "sn44.2:15.1": "„Daher, Anurādha, solltest du jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
 }
