--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "sn44.2:14.1": "„Nein, Herr.“ ",
   "sn44.2:15.1": "„Daher, Anurādha, solltest du jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "sn44.2:15.2": "Jegliche Art von Gefühl … ",
-  "sn44.2:15.3": "Jegliche Art von Wahrnehmung … "
+  "sn44.2:15.3": "Jegliche Art von Wahrnehmung … ",
+  "sn44.2:15.4": "Jegliche Art von Entscheidungen … "
 }
