--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn44.2:15.1": "„Daher, Anurādha, solltest du jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "sn44.2:15.2": "Jegliche Art von Gefühl … ",
   "sn44.2:15.3": "Jegliche Art von Wahrnehmung … ",
-  "sn44.2:15.4": "Jegliche Art von Entscheidungen … "
+  "sn44.2:15.4": "Jegliche Art von Entscheidungen … ",
+  "sn44.2:15.5": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – solltest du wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
 }
