--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn44.2:15.7": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
   "sn44.2:15.8": "Er versteht: ‚Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "sn44.2:16.1": "Was denkst du, Anurādha? ",
-  "sn44.2:16.2": "Siehst du den Klargewordenen als Form an?“ "
+  "sn44.2:16.2": "Siehst du den Klargewordenen als Form an?“ ",
+  "sn44.2:16.3": "„Nein, Herr.“ "
 }
