--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "sn44.2:15.8": "Er versteht: ‚Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "sn44.2:16.1": "Was denkst du, Anurādha? ",
   "sn44.2:16.2": "Siehst du den Klargewordenen als Form an?“ ",
-  "sn44.2:16.3": "„Nein, Herr.“ "
+  "sn44.2:16.3": "„Nein, Herr.“ ",
+  "sn44.2:16.4": "„Siehst du den Klargewordenen als Gefühl … "
 }
