--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "sn44.2:16.3": "„Nein, Herr.“ ",
   "sn44.2:16.4": "„Siehst du den Klargewordenen als Gefühl … ",
   "sn44.2:16.6": "als Wahrnehmung … ",
-  "sn44.2:16.8": "als Entscheidungen … "
+  "sn44.2:16.8": "als Entscheidungen … ",
+  "sn44.2:16.10": "als Bewusstsein an?“ "
 }
