--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "sn44.2:16.4": "„Siehst du den Klargewordenen als Gefühl … ",
   "sn44.2:16.6": "als Wahrnehmung … ",
   "sn44.2:16.8": "als Entscheidungen … ",
-  "sn44.2:16.10": "als Bewusstsein an?“ "
+  "sn44.2:16.10": "als Bewusstsein an?“ ",
+  "sn44.2:16.11": "„Nein, Herr.“ "
 }
