Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn44.2:16.6": "als Wahrnehmung … ",
   "sn44.2:16.8": "als Entscheidungen … ",
   "sn44.2:16.10": "als Bewusstsein an?“ ",
-  "sn44.2:16.11": "„Nein, Herr.“ "
+  "sn44.2:16.11": "„Nein, Herr.“ ",
+  "sn44.2:16.12": "„Was denkst du, Anurādha? "
 }
