Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn44.2:16.8": "als Entscheidungen … ",
   "sn44.2:16.10": "als Bewusstsein an?“ ",
   "sn44.2:16.11": "„Nein, Herr.“ ",
-  "sn44.2:16.12": "„Was denkst du, Anurādha? "
+  "sn44.2:16.12": "„Was denkst du, Anurādha? ",
+  "sn44.2:16.13": "Siehst du den Klargewordenen als in der Form an?“ "
 }
