--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "sn44.2:16.12": "„Was denkst du, Anurādha? ",
   "sn44.2:16.13": "Siehst du den Klargewordenen als in der Form an?“ ",
   "sn44.2:16.14": "„Nein, Herr.“ ",
-  "sn44.2:16.15": "„Oder siehst du den Klargewordenen als von Form getrennt an?“ "
+  "sn44.2:16.15": "„Oder siehst du den Klargewordenen als von Form getrennt an?“ ",
+  "sn44.2:16.16": "„Nein, Herr.“ "
 }
