--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn44.2:16.14": "„Nein, Herr.“ ",
   "sn44.2:16.15": "„Oder siehst du den Klargewordenen als von Form getrennt an?“ ",
   "sn44.2:16.16": "„Nein, Herr.“ ",
-  "sn44.2:16.17": "„Siehst du den Klargewordenen als im Gefühl an … "
+  "sn44.2:16.17": "„Siehst du den Klargewordenen als im Gefühl an … ",
+  "sn44.2:16.18": "oder als vom Gefühl getrennt … "
 }
