Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "sn44.2:16.17": "„Siehst du den Klargewordenen als im Gefühl an … ",
   "sn44.2:16.18": "oder als vom Gefühl getrennt … ",
   "sn44.2:16.19": "als in der Wahrnehmung … ",
-  "sn44.2:16.20": "oder als von der Wahrnehmung getrennt … "
+  "sn44.2:16.20": "oder als von der Wahrnehmung getrennt … ",
+  "sn44.2:16.21": "als in Entscheidungen … "
 }
