Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "sn44.2:16.18": "oder als vom Gefühl getrennt … ",
   "sn44.2:16.19": "als in der Wahrnehmung … ",
   "sn44.2:16.20": "oder als von der Wahrnehmung getrennt … ",
-  "sn44.2:16.21": "als in Entscheidungen … "
+  "sn44.2:16.21": "als in Entscheidungen … ",
+  "sn44.2:16.22": "oder als von Entscheidungen getrennt … "
 }
