Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "sn44.2:16.19": "als in der Wahrnehmung … ",
   "sn44.2:16.20": "oder als von der Wahrnehmung getrennt … ",
   "sn44.2:16.21": "als in Entscheidungen … ",
-  "sn44.2:16.22": "oder als von Entscheidungen getrennt … "
+  "sn44.2:16.22": "oder als von Entscheidungen getrennt … ",
+  "sn44.2:16.23": "als im Bewusstsein … "
 }
