Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -210,7 +210,7 @@
   "pli-tv-kd14:4.8.13": "",
   "pli-tv-kd14:4.8.14": "“And how can I do that?” ",
   "pli-tv-kd14:4.8.15": "“Go to the Buddha and say, ",
-  "pli-tv-kd14:4.8.16": "‘Venerable Sir, this is not proper or appropriate. There’s fear, distress, and oppression in this district, where none of these should exist. ",
+  "pli-tv-kd14:4.8.16": "‘Venerable Sir, this isn’t proper or appropriate. There’s fear, distress, and oppression in this district, where none of these should exist. ",
   "pli-tv-kd14:4.8.17": "It’s windy where it should be calm. ",
   "pli-tv-kd14:4.8.18": "It’s as if water is burning. ",
   "pli-tv-kd14:4.8.19": "Venerable Dabba the Mallian has raped me.’” ",
