Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -816,8 +816,8 @@
   "pli-tv-kd14:14.11.12": "When the Sangha does a legal procedure with an indeterminate mind—",
   "pli-tv-kd14:14.11.13": "whether a procedure consisting of getting permission, a procedure consisting of one motion, a procedure consisting of one motion and one announcement, or a procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.11.14": "this is called an indeterminate legal issue arising from business. ",
-  "pli-tv-kd14:14.12.1": "(4a) Are there disputes that are a legal issue arising from a dispute? Are there disputes that are not a legal issue? Are there legal issues that are not a dispute? Are there legal issues that are also a dispute? ",
-  "pli-tv-kd14:14.12.2": "There may be disputes that are a legal issue arising from a dispute; there may be disputes that are not a legal issue; there may be legal issues that are not a dispute; there may be legal issues that are also a dispute. ",
+  "pli-tv-kd14:14.12.1": "(4a) Are there disputes that are also legal issues arising from a dispute? Are there disputes that aren’t also legal issues? Are there legal issues that aren’t also disputes? Are there legal issues that are also disputes? ",
+  "pli-tv-kd14:14.12.2": "There are disputes that are also legal issues arising from a dispute. There are disputes that aren’t also legal issues. There are legal issues that aren’t also disputes. There are legal issues that are also disputes. ",
   "pli-tv-kd14:14.12.3": "How is there a dispute that is a legal issue arising from a dispute? ",
   "pli-tv-kd14:14.12.4": "It may be that monks are disputing, saying, ",
   "pli-tv-kd14:14.12.5": "‘This is the Teaching’, or ‘This is contrary to the Teaching’ … ",
