Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -818,13 +818,13 @@
   "pli-tv-kd14:14.11.14": "this is called an indeterminate legal issue arising from business. ",
   "pli-tv-kd14:14.12.1": "(4a) Are there disputes that are also legal issues arising from a dispute? Are there disputes that aren’t also legal issues? Are there legal issues that aren’t also disputes? Are there legal issues that are also disputes? ",
   "pli-tv-kd14:14.12.2": "There are disputes that are also legal issues arising from a dispute. There are disputes that aren’t also legal issues. There are legal issues that aren’t also disputes. There are legal issues that are also disputes. ",
-  "pli-tv-kd14:14.12.3": "How is there a dispute that is a legal issue arising from a dispute? ",
+  "pli-tv-kd14:14.12.3": "How’s there a dispute that’s also a legal issue arising from a dispute? ",
   "pli-tv-kd14:14.12.4": "It may be that monks are disputing, saying, ",
-  "pli-tv-kd14:14.12.5": "‘This is the Teaching’, or ‘This is contrary to the Teaching’ … ",
+  "pli-tv-kd14:14.12.5": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.12.6": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.12.7": "In regard to this, whatever there is of quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife—",
-  "pli-tv-kd14:14.12.8": "this is a dispute that is a legal issue arising from a dispute. ",
-  "pli-tv-kd14:14.12.9": "How is there a dispute that is not a legal issue? ",
+  "pli-tv-kd14:14.12.8": "this is a dispute that’s also a legal issue arising from a dispute. ",
+  "pli-tv-kd14:14.12.9": "How’s there a dispute that isn’t also a legal issue? ",
   "pli-tv-kd14:14.12.10": "A mother disputes with her offspring; an offspring with their mother; a father with his offspring; an offspring with their father; a brother with his brother; a brother with his sister; a sister with her brother; a friend with their friend—",
   "pli-tv-kd14:14.12.11": "this is a dispute that is not a legal issue. ",
   "pli-tv-kd14:14.12.12": "How is there a legal issue that is not a dispute? ",
