Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -826,11 +826,11 @@
   "pli-tv-kd14:14.12.8": "this is a dispute that’s also a legal issue arising from a dispute. ",
   "pli-tv-kd14:14.12.9": "How’s there a dispute that isn’t also a legal issue? ",
   "pli-tv-kd14:14.12.10": "A mother disputes with her offspring; an offspring with their mother; a father with his offspring; an offspring with their father; a brother with his brother; a brother with his sister; a sister with her brother; a friend with their friend—",
-  "pli-tv-kd14:14.12.11": "this is a dispute that is not a legal issue. ",
-  "pli-tv-kd14:14.12.12": "How is there a legal issue that is not a dispute? ",
+  "pli-tv-kd14:14.12.11": "this is a dispute that isn’t also a legal issue. ",
+  "pli-tv-kd14:14.12.12": "How’s there a legal issue that isn’t also a dispute? ",
   "pli-tv-kd14:14.12.13": "A legal issue arising from an accusation, a legal issue arising from an offense, a legal issue arising from business—",
-  "pli-tv-kd14:14.12.14": "this is a legal issue that is not a dispute. ",
-  "pli-tv-kd14:14.12.15": "How is there a legal issue that is also a dispute? ",
+  "pli-tv-kd14:14.12.14": "this is a legal issue that isn’t also a dispute. ",
+  "pli-tv-kd14:14.12.15": "How’s there a legal issue that’s also a dispute? ",
   "pli-tv-kd14:14.12.16": "A legal issue arising from a dispute is a legal issue and also a dispute. ",
   "pli-tv-kd14:14.13.1": "(4b) Are there accusations that are a legal issue arising from an accusation? Are there accusations that are not a legal issue? Are there legal issues that are not an accusation? Are there legal issues that are also an accusation? ",
   "pli-tv-kd14:14.13.2": "There may be accusations that are a legal issue arising from an accusation; there may be accusations that are not a legal issue; there may be legal issues that are not an accusation; there may legal issues that are also an accusation. ",
