Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -836,10 +836,10 @@
   "pli-tv-kd14:14.13.2": "There are accusations that are also legal issues arising from an accusation. There are accusations that aren’t also legal issues. There are legal issues that aren’t also accusations. There are legal issues that are also accusations. ",
   "pli-tv-kd14:14.13.3": "How’s there an accusation that’s also a legal issue arising from an accusation? ",
   "pli-tv-kd14:14.13.4": "It may be that monks accuse a monk ",
-  "pli-tv-kd14:14.13.5": "of failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
-  "pli-tv-kd14:14.13.6": "In regard to this, whatever there is of accusation, accusing, allegation, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
-  "pli-tv-kd14:14.13.7": "this is an accusation that is a legal issue arising from an accusation. ",
-  "pli-tv-kd14:14.13.8": "How is there an accusation that is not a legal issue? ",
+  "pli-tv-kd14:14.13.5": "of failure in morality, conduct, view, or livelihood. ",
+  "pli-tv-kd14:14.13.6": "In regard to this, whatever there is of accusations, accusing, allegations, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
+  "pli-tv-kd14:14.13.7": "this is an accusation that’s also a legal issue arising from an accusation. ",
+  "pli-tv-kd14:14.13.8": "How’s there an accusation that isn’t also a legal issue? ",
   "pli-tv-kd14:14.13.9": "A mother accuses her offspring; an offspring their mother; a father his offspring; an offspring their father; a brother his brother; a brother his sister; a sister her brother; a friend their friend—",
   "pli-tv-kd14:14.13.10": "this is an accusation that is not a legal issue. ",
   "pli-tv-kd14:14.13.11": "How is there a legal issue that is not an accusation? ",
