Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -841,11 +841,11 @@
   "pli-tv-kd14:14.13.7": "this is an accusation that’s also a legal issue arising from an accusation. ",
   "pli-tv-kd14:14.13.8": "How’s there an accusation that isn’t also a legal issue? ",
   "pli-tv-kd14:14.13.9": "A mother accuses her offspring; an offspring their mother; a father his offspring; an offspring their father; a brother his brother; a brother his sister; a sister her brother; a friend their friend—",
-  "pli-tv-kd14:14.13.10": "this is an accusation that is not a legal issue. ",
-  "pli-tv-kd14:14.13.11": "How is there a legal issue that is not an accusation? ",
+  "pli-tv-kd14:14.13.10": "this is an accusation that isn’t also a legal issue. ",
+  "pli-tv-kd14:14.13.11": "How’s there a legal issue that isn’t also an accusation? ",
   "pli-tv-kd14:14.13.12": "A legal issue arising from an offense, a legal issue arising from business, a legal issue arising from a dispute—",
-  "pli-tv-kd14:14.13.13": "this is a legal issue that is not an accusation. ",
-  "pli-tv-kd14:14.13.14": "How is there a legal issue that is also an accusation? ",
+  "pli-tv-kd14:14.13.13": "this is a legal issue that isn’t also an accusation. ",
+  "pli-tv-kd14:14.13.14": "How’s there a legal issue that’s also an accusation? ",
   "pli-tv-kd14:14.13.15": "A legal issue arising from an accusation is a legal issue and also an accusation. ",
   "pli-tv-kd14:14.14.1": "(4c) Are there  offenses that are a legal issue arising from an offense? Are there offenses that are not a legal issue? Are there legal issues that are not an offense? Are there legal issues that are also an offense? ",
   "pli-tv-kd14:14.14.2": "There may be offenses that are a legal issue arising from an offense; there may be offenses that are not a legal issue; there may be legal issues that are not an offense; there may be legal issues that are also an offense. ",
